# rusty-razor

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  background.html  build.html  example.html  index.html  intro.html  model-finding.html  overview.html  print.html  razor.html  run.html  searchindex.js  syntax.html  theory.html
.github/workflows/: github-pages.yml
background/: chase.html  satisfiability.html  termination.html
benches/: perf_test.rs
book/: book.toml
book/src/: SUMMARY.md  background.md  build.md  example.md  intro.md  model-finding.md  overview.md  razor.md  run.md  syntax.md  theory.md
book/src/background/: chase.md  satisfiability.md  termination.md
book/src/example/: golden-head.md  hold-the-door.md  valar-morghulis.md
book/src/run/: bounded.md  scheduler.md
book/src/syntax/: grammar.md  precedence.md  syntax  variations.md
book/src/theory/: chase.md  implementation.md
example/: golden-head.html  hold-the-door.html  valar-morghulis.html
geometrizer/: Cargo.toml
geometrizer/src/: main.rs  utils.rs
razor/: Cargo.toml
razor-bin/: Cargo.toml
razor-bin/src/: main.rs
razor-chase/: Cargo.toml
razor-chase/benches/: perf_test.rs
razor-chase/src/: chase.rs  lib.rs  main.rs  test_prelude.rs  trace.rs
razor-chase/src/chase/: bounder.rs  impl.rs  scheduler.rs  strategy.rs
razor-chase/src/chase/impl/: basic.rs  batch.rs  collapse.rs  reference.rs  relational.rs  todo.txt
razor-chase/src/chase/impl/relational/: attribute.rs  constants.rs  equation_rewrite.rs  evaluator.rs  expression.rs  memo.rs  model.rs  pre_processor.rs  preprocessor.rs  relationalize.rs  rewrite.rs  sequent.rs  symbol.rs
razor-chase/src/trace/: subscriber.rs
razor-chase/src/utils/: terminal.rs
razor-fol/: Cargo.toml
razor-fol/src/: grammar.lalrpop  lib.rs  parser.rs  syntax.rs  test_macros.rs  test_prelude.rs  transform.rs
razor-fol/src/syntax/: fof.rs  formula.rs  macros.rs  qff.rs  signature.rs  symbol.rs  term.rs  theory.rs
razor-fol/src/syntax/formula/: clause.rs  fof.rs  qff.rs
razor-fol/src/transform/: cnf.rs  dnf.rs  gnf.rs  linear.rs  nnf.rs  pnf.rs  range_restrict.rs  relational.rs  relationalize.rs  simplify.rs  snf.rs  substitution.rs
razor/src/: command.rs  constants.rs  main.rs  terminal.rs  utils.rs
razor/src/utils/: terminal.rs
run/: bounded.html  scheduler.html
src/: chase.rs  formula.rs  lib.rs  main.rs  test_prelude.rs  trace.rs
src/chase/: bounder.rs  chase.rs  impl.rs  mod.rs  scheduler.rs  selector.rs  strategy.rs
src/chase/impl/: basic.rs  batch.rs  reference.rs
src/formula/: mod.rs  parser.rs  syntax.rs  transform.rs
src/trace/: subscriber.rs
syntax/: grammar.html  precedence.html  variations.html
theories/bounded/: thy0.model  thy0.raz  thy1.model  thy1.raz  thy2.raz  thy3.model  thy3.raz  thy33.raz  thy4.model  thy4.raz  thy5.model  thy5.raz  thy6.model  thy7.model  thy7.raz
theories/core/: thy0.model  thy0.raz  thy1.model  thy1.raz  thy10.model  thy10.raz  thy11.raz  thy12.raz  thy13.raz  thy14.model  thy14.raz  thy15.raz  thy16.model  thy16.raz  thy17.model  thy17.raz  thy18.model  thy18.raz  thy19.model  thy19.raz  thy2.model  thy2.raz  thy20.model  thy20.raz  thy21.model  thy21.raz  thy22.model  thy22.raz  thy23.model  thy23.raz  thy24.model  thy24.raz  thy25.model  thy25.raz  thy26.model  thy26.raz  thy27.raz  thy28.model  thy28.raz  thy29.model  (+44 more)
theories/examples/: golden-lion.raz  grandpa.raz  hodor-linear.raz  hodor-time-loop.raz  lannisters.raz  toy.raz  valar-morghulis.raz
theory/: chase.html  implementation.html
