[package]
name = "razor-chase"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"

[dependencies]
itertools = "0.7"
criterion = "0.1"
tracing = "0.1"
rand = "0.6.5"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.93"
razor-fol = { path = "../razor-fol" }

[lib]
name = "razor_chase"
path = "src/lib.rs"

[[bench]]
name = "perf_test"
harness = false