[package]
name = "razor-chase"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"
license = "MIT"
description = "razor-chase implements a variation of The Chase algorithm to find models for theories in geometric form."
documentation = "https://salmans.github.io/rusty-razor/intro.html"
homepage = "https://github.com/salmans/rusty-razor"
repository = "https://github.com/salmans/rusty-razor"
keywords = ["razor", "chase", "geometric", "logic", "model-finder"]
categories = ["mathematics"]

[dependencies]
itertools = "0.7"
criterion = "0.1"
tracing = "0.1"
rand = "0.6.5"
serde = "1.0.93"
serde_json = "1.0.39"
serde_derive = "1.0.93"
anyhow = "^1.0"
razor-fol = { path = "../razor-fol", version = "0.1.0" }
relalg = { path = "../../relalg/core" }

[lib]
name = "razor_chase"
path = "src/lib.rs"

[[bench]]
name = "perf_test"
harness = false