[package]
name = "razor-fol"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"
license = "MIT"
description = "razor-fol is a library for parsing and syntactic manipulation of first-order theories."
documentation = "https://salmans.github.io/rusty-razor/intro.html"
homepage = "https://github.com/salmans/rusty-razor"
repository = "https://github.com/salmans/rusty-razor"
keywords = ["razor", "first-order", "logic", "parser", "geometric"]
categories = ["parser-implementations", "mathematics"]

[dependencies]
itertools = "0.7"
failure = "0.1.6"

[dependencies.nom]
version = "4.2.3"

[dependencies.nom_locate]
version = "0.3.1"

[lib]
name = "razor_fol"
path = "src/lib.rs"