[package]
name = "razor-fol"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"
license = "MIT"
description = "razor-fol is a library for parsing and syntactic manipulation of first-order theories."
documentation = "https://salmans.github.io/rusty-razor/intro.html"
homepage = "https://github.com/salmans/rusty-razor"
repository = "https://github.com/salmans/rusty-razor"
keywords = ["razor", "first-order", "logic", "parser", "geometric"]
categories = ["parser-implementations", "mathematics"]
build = "build.rs"

[dependencies]
itertools = "^0.7"
thiserror = "^1.0"
lalrpop-util = "^0.19"

[build-dependencies]
lalrpop = "^0.19"
regex = "1"

[lib]
name = "razor_fol"
path = "src/lib.rs"