[package]
name = "razor"
version = "0.1.0"
authors = ["Salman Saghafi <salman.saghafi@me.com>"]
edition = "2018"
license = "MIT"
description = "razor is a command-line tool for constructing finite models for first-order theories."
documentation = "https://salmans.github.io/rusty-razor/intro.html"
homepage = "https://github.com/salmans/rusty-razor"
repository = "https://github.com/salmans/rusty-razor"
keywords = ["razor", "chase", "logic", "model-finder"]
categories = ["mathematics", "command-line-utilities"]

[dependencies]
razor-fol = { path = "../razor-fol", version = "0.1.0" }
razor-chase = { path = "../razor-chase", version = "0.1.0" }
itertools = "0.7"
anyhow = "^1.0.31"
structopt = "0.2"
term = "0.2"
tracing = "0.1"

[[bin]]
bench = false
path = "src/main.rs"
name = "razor"